--- a/apps/AdminComposite/Areas/Forum/Views/Badge/_UpdateBadge.cshtml
+++ b/apps/AdminComposite/Areas/Forum/Views/Badge/_UpdateBadge.cshtml
@@ -57,8 +57,8 @@
 					<a href="#" id="reset-image" data-original-url="@Model.ImageUrl" style="display: none">Reset Image</a>
 				</dd>
 			</dl>
-		</fieldset>
+		</fieldset>	
 
-		<button type="submit">Save</button>
+		<input type="submit" value="Save" />
 	}
 </section>
