--- a/src/sdk/CompositeInspector/Views/Composite/view-agent.cshtml
+++ b/src/sdk/CompositeInspector/Views/Composite/view-agent.cshtml
@@ -1,5 +1,5 @@
 @inherits Nancy.ViewEngines.Razor.NancyRazorViewBase
-@using JsonCompositeInspector.Models;
+@using CompositeInspector.Models
 @using Euclid.Framework;
 @{
 	Layout = "Shared/_Layout.cshtml";
