--- a/src/sdk/CompositeInspector/Views/Commands/view-command.cshtml
+++ b/src/sdk/CompositeInspector/Views/Commands/view-command.cshtml
@@ -1,4 +1,5 @@
 @inherits Nancy.ViewEngines.Razor.NancyRazorViewBase
+@using CompositeInspector.Models
 @using JsonCompositeInspector.Models;
 @using Euclid.Framework;
 @{
