add vsdoc comments to euclid-0.9.js, refactored the QueryModule file for consistency

--- a/src/sdk/CompositeInspector/Views/Composite/view-agent.cshtml
+++ b/src/sdk/CompositeInspector/Views/Composite/view-agent.cshtml
@@ -6,6 +6,12 @@
 	AgentModel model = (AgentModel)@Model;
 }
 
+@if (false)
+{ 
+	// this will not get compiled by the razor view engine, but gives us access to intellisense for the EUCLID js library
+	<script type="text/javascript" src="../../Assets/Scripts/euclid-0.9.js"></script>
+}
+
 <div class="row show-grid">
 
 	<div class="span16 columns">
