--- a/src/sdk/CompositeInspector/Views/Composite/home.cshtml
+++ b/src/sdk/CompositeInspector/Views/Composite/home.cshtml
@@ -6,6 +6,12 @@
 	var model = (CompositeHome)@Model;
 }
 
+@if (false)
+{ 
+	// this will not get compiled by the razor view engine, but gives us access to intellisense for the EUCLID js library
+	<script type="text/javascript" src="../../Assets/Scripts/euclid-0.9.js"></script>
+}
+
 <div class="pageheader">
 	<h3>@Model.CompositeName
 		<small>@Model.CompositeDescription</small>
