--- a/src/sdk/CompositeInspector/Views/Queries/view-query-methods.cshtml
+++ b/src/sdk/CompositeInspector/Views/Queries/view-query-methods.cshtml
@@ -8,6 +8,12 @@
 	Query Methods for @model
 }
 
+@if (false)
+{ 
+	// this will not get compiled by the razor view engine, but gives us access to intellisense for the EUCLID js library
+	<script type="text/javascript" src="../../Assets/Scripts/euclid-0.9.js"></script>
+}
+
 <script type="text/javascript">
 	$(document).ready(function() {
 		var queryMetadata = null;
