fix small admin ui bugs

--- a/apps/AdminComposite/Areas/Forum/Views/Avatar/List.cshtml
+++ b/apps/AdminComposite/Areas/Forum/Views/Avatar/List.cshtml
@@ -96,7 +96,7 @@
 		{
 			<tbody class="no-table-data">
 				<tr>
-					<td colspan="5">This forum does not yet have any avatars. <a href="#" class="create-category">Create an avatar.</a></td>
+					<td colspan="5">This forum does not yet have any avatars. <a href="#" class="create-avatar">Create an avatar.</a></td>
 				</tr>
 			</tbody>
 		}
