--- a/apps/StorefrontAdminComposite/Views/Shell/Index.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shell/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-	ViewBag.Title = "title";
+	ViewBag.Title = "NewCo Storefront Admin";
 	Layout = "../Shared/_Layout.cshtml";
 }
-<h2>title</h2>
