working on a better project structure for client side apps

--- a/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
@@ -16,5 +16,4 @@
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-tooltip.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-transition.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-typeahead.js")"> </script>
-
-<script type="text/javascript" src="@Url.Content("~/Content/js/storefrontadmin.js")"> </script>
+<script type="text/javascript" src="@Url.Content("~/Content/js/app.js")"> </script>
