--- a/apps/StorefrontAdminComposite/Views/Shared/Styles.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/Styles.cshtml
@@ -1,2 +1,2 @@
 ﻿<link rel="stylesheet" href="@Url.Content("~/Content/css/bootstrap.css")"/>
-<link rel="stylesheet" href="@Url.Content("~/Content/css/storefrontAdmin.css")"/>
+<link rel="stylesheet" href="@Url.Content("~/Content/css/app.css")"/>
