basic integration with sammy.js

--- a/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-tooltip.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-transition.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-typeahead.js")"> </script>
+<script type="text/javascript" src="@Url.Content("~/Content/js/lib/sammy.js")"> </script>
 <script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/euclid.admin.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/app.js")"> </script>
