--- a/apps/StorefrontAdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 
 				</div>
 
-				<div class="span9" style="background-color: ghostwhite;">
+				<div id="app-content" class="span9" style="background-color: ghostwhite;">
 					@RenderBody()
 				</div>
 
