--- a/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
@@ -1,6 +1,6 @@
-﻿@* TODO: use require.js for dependency management *@<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1-vsdoc.js"> </script>
+﻿@* TODO: use require.js for dependency management *@<script type="text/javascript"
+	src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1-vsdoc.js"> </script>
 <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/lib/backbone-min.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/handlebars-1.0.0.beta.6.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-alert.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-button.js")"> </script>
@@ -8,13 +8,13 @@
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-collapse.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-dropdown.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-modal.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-popover.js")"> </script>
+@*<script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-popover.js")"> </script>*@
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-scrollspy.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-tab.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-tooltip.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-transition.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-typeahead.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/lib/sammy.js")"> </script>
-<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
+@*<script type="text/javascript" src="/composite/js/euclid-0.9.js"></script>*@
 <script type="text/javascript" src="@Url.Content("~/Content/js/euclid.admin.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/app.js")"> </script>
