--- a/apps/StorefrontAdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/_Layout.cshtml
@@ -25,28 +25,7 @@
 
 				<div class="span3">
 
-					<div class="well" style="padding: 8px 0;">
-						<ul class="nav list">
-							<li class="nav-header">{Company Name}</li>
-							<li class="active"><a href="#"><i class="icon signal"></i>&nbsp;Financials</a></li>
-							<li><a href="#"><i class="icon eye-open"></i>&nbsp;All Transactions</a></li>
-							<li><a href="#"><i class="icon user"></i>&nbsp;Employees</a></li>
-							<li class="nav-header">{Store Name}</li>
-							<li><a href="#"><i class="icon signal"></i>&nbsp;Financials</a></li>
-							<li><a href="#"><i class="icon inbox"></i>&nbsp;Orders</a></li>
-							<li><a href="#"><i class="icon user"></i>&nbsp;Customers</a></li>
-							<li><a href="#"><i class="icon th-list"></i>&nbsp;Product Catalog</a></li>
-							<li><a href="#"><i class="icon exclamation-sign"></i>&nbsp;Promotions</a></li>
-							<li><a href="#"><i class="icon qrcode"></i>&nbsp;Discount Codes</a></li>
-							<li class="nav-header">{Store Name}</li>
-							<li><a href="#"><i class="icon signal"></i>&nbsp;Financials</a></li>
-							<li><a href="#"><i class="icon inbox"></i>&nbsp;Orders</a></li>
-							<li><a href="#"><i class="icon user"></i>&nbsp;Customers</a></li>
-							<li><a href="#"><i class="icon th-list"></i>&nbsp;Product Catalog</a></li>
-							<li><a href="#"><i class="icon exclamation-sign"></i>&nbsp;Promotions</a></li>
-							<li><a href="#"><i class="icon qrcode"></i>&nbsp;Discount Codes</a></li>
-						</ul>
-					</div>
+					@Html.Partial("LeftNav")
 
 				</div>
 
