rough draft integration of handlebars templating into admin shell

--- a/apps/StorefrontAdminComposite/Content/app/templates/company/Financials.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/Financials.handlebars
@@ -1,3 +1,3 @@
-﻿<script id="template-Financials" type="text/x-handlebars-template">
-{{content}}
+﻿<script id="template-companyFinancials" type="text/x-handlebars-template">
+	<h3>{{title}}</h3>
 </script>
