--- a/apps/StorefrontAdminComposite/Content/app/templates/company/AllTransactions.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/AllTransactions.handlebars
@@ -1,3 +1,3 @@
-﻿<script id="template-AllTransactions" type="text/x-handlebars-template">
-{{content}}
+﻿<script id="template-companyAllTransactions" type="text/x-handlebars-template">
+	<h3>{{title}}</h3>
 </script>
