--- a/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
@@ -1,3 +1,3 @@
-﻿<script id="template-Employees" type="text/x-handlebars-template">
-{{content}}
+﻿<script id="template-companyEmployees" type="text/x-handlebars-template">
+	<h3>{{title}}</h3>
 </script>
