--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Orders.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Orders.handlebars
@@ -1,3 +1,3 @@
-﻿<script id="template-Orders" type="text/x-handlebars-template">
-{{content}}
+﻿<script id="template-storeOrders" type="text/x-handlebars-template">
+	<h3>{{title}}</h3>
 </script>
