--- a/apps/StorefrontAdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
 
 				</div>
 
-				<div id="app-content" class="span9" style="background-color: ghostwhite;">
+				<div id="app-content" class="span9">
 					@RenderBody()
 				</div>
 
