--- a/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
@@ -1,3 +1,34 @@
 ﻿<script id="template-companyEmployees" type="text/x-handlebars-template">
-	<h3>{{title}}</h3>
+	<h3>{{companyName}} Employees</h3>
+
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				{{#each tableHeaders}}
+				<th>{{this}}</th>
+				{{/each}}
+			</tr>
+		</thead>
+		<tbody>
+
+			{{#each tableData}}
+			<tr>
+				<td>{{this.lastName}}</td>
+				<td>{{this.firstName}}</td>
+				<td>{{this.type}}</td>
+				<td>{{this.hireDate}}</td>
+				<td>{{this.location}}</td>
+				<td>(buttons)</td>
+			</tr>
+			{{/each}}
+
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="6">
+					<button class="btn primary pull-right">Add Employee</button>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 </script>
