--- a/apps/StorefrontAdminComposite/Content/app/templates/company/AllTransactions.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/AllTransactions.handlebars
@@ -14,10 +14,26 @@
 			{{#each tableData}}
 			<tr>
 				<td>{{this.id}}...</td>
+				<td>{{this.state}}</td>
 				<td>{{this.dateTime}}</td>
 				<td>{{this.type}} at {{this.storeName}}</td>
 				<td>{{this.amount}}</td>
-				<td>(buttons)</td>
+				<td>
+					<div class="btn-group">
+						<a class="btn small" href="#">Action</a>
+						<a class="btn small dropdown-toggle" data-toggle="dropdown" href="#">
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a>View Details</a>
+							</li>
+							<li>
+								<a>Freeze</a>
+							</li>
+						</ul>
+					</div>
+				</td>
 			</tr>
 			{{/each}}
 
