--- a/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
@@ -18,7 +18,25 @@
 				<td>{{this.type}}</td>
 				<td>{{this.hireDate}}</td>
 				<td>{{this.location}}</td>
-				<td>(buttons)</td>
+				<td>
+					<div class="btn-group">
+						<a class="btn small" href="#">Action</a>
+						<a class="btn small dropdown-toggle" data-toggle="dropdown" href="#">
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a>View Profile</a>
+							</li>
+							<li>
+								<a>Suspend/Deactivate</a>
+							</li>
+							<li>
+								<a>Delete</a>
+							</li>
+						</ul>
+					</div>
+				</td>
 			</tr>
 			{{/each}}
 
