--- a/apps/StorefrontAdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/_Layout.cshtml
@@ -8,31 +8,19 @@
 	<body>
 
 		<div class="navbar navbar-static">
-
 			<div class="navbar-inner">
-
-				<div class="container">
-					<a class="brand" href="#">@ViewBag.Title</a>
-				</div>
-
+				<div class="container"><a class="brand" href="#">@ViewBag.Title</a></div>
 			</div>
-
 		</div>
 
 		<div class="container">
-
 			<div class="row">
-
 				<div class="span3">
-
 					@Html.Partial("LeftNav")
-
 				</div>
-
 				<div id="app-content" class="span9">
 					@RenderBody()
 				</div>
-
 			</div>
 
 		</div>
