--- a/src/sdk/CompositeInspector/Views/Composite/publication-record.cshtml
+++ b/src/sdk/CompositeInspector/Views/Composite/publication-record.cshtml
@@ -1,55 +1,61 @@
-﻿<div id="publication-record">
-	<div class="row show-grid">
-		<div class="span16 columns">
-			<div>
-				<strong>Completed</strong>
-				<br />
-				{{Completed}}
-			</div>
-			<div>
-				<strong>Dispatched</strong>
-				<br />
-				{{Dispatched}}
-			</div>
-			<div>
-				<strong>Error</strong>
-				<br />
-				{{Error}}
-			</div>
-			<div>
-				<strong>Identifier</strong>
-				<br />
-				{{Identifier}}
-			</div>
-			<div>
-				<strong>Message</strong>
-				<br />
-				<a href="{{MessageLocation}}">{{MessageLocation}}</a>
-			</div>
-			<div>
-				<strong>Message Type</strong>
-				<br />
-				{{MessageType}}
-			</div>
-			<div>
-				<strong>Created</strong>
-				<br />
-				{{Created}}
-			</div>
-
-			{{#if Error}}
-			<div>
-				<strong>Message</strong>
-				<br />
-				{{ErrorMessage}}
-			</div>
-
-			<div>
-				<strong>CallStack</strong>
-				<br />
-				{{CallStack}}
-			</div>
-			{{/if}}
+﻿<script type="text/javascript">
+	$(document).ready(function () {
+		$(".message-location").tooltip();
+	});
+</script>
+<div id="publication-record">
+	<div class="row">
+		<div class="span3">
+			<strong>Completed</strong>
+			<br />
+			{{Completed}}
+		</div>
+		<div class="span3">
+			<strong>Dispatched</strong>
+			<br />
+			{{Dispatched}}
+		</div>
+		<div class="span3">
+			<strong>Identifier</strong>
+			<br />
+			{{Identifier}}
+		</div>
+		<div class="span3">
+			<strong>Created</strong>
+			<br />
+			{{Created}}
 		</div>
 	</div>
+	<div class="row">
+		<div class="span8">
+			<strong>Message</strong>
+			<br />
+			<a class="message-location" href="{{MessageLocation}}" rel="tooltip" data-original-title="click to open the serialized message">{{MessageLocation}}</a>
+		</div>
+		<div class="span4">
+			<strong>Message Type</strong>
+			<br />
+			{{MessageType}}
+		</div>
+	</div>
+
+	{{#if Error}}
+	<div class="row">
+		<div class="span12">&nbsp;</div>
+	</div>
+	<div class="row">
+		<div class="span12">
+			<strong>Error Message</strong>
+			<br />
+			{{ErrorMessage}}
+		</div>
+	</div>
+	<div class="row">
+		<div class="span12">
+			<strong>CallStack</strong>
+			<br />
+			{{CallStack}}
+		</div>
+	</div>
+	{{/if}}
 </div>
